2007-09-04  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui.Pads/NodeState.cs,
	  MonoDevelop.Ide.Gui/ProjectOperations.cs: Fixed a bug in user
	  preferences file persistence.

2007-09-04  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui/ProjectOperations.cs: Userpref errors are now catched
	  silently.
	* MonoDevelop.Ide.Tasks/Task.cs, MonoDevelop.Ide.Tasks/TaskService.cs: Fixed
	  remaining issue with bug 82282.

2007-09-03  Eric Butler <eric@extremeboredom.net>

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFolderNodeBuilder.cs,
	  MonoDevelop.Ide.addin.xml:
	  Add "Include To Project" menu item to Folders that recursively adds
	  files.

2007-09-03  Eric Butler <eric@extremeboredom.net>

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFileNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFolderNodeBuilder.cs:
	  Highlight missing files and directories

2007-09-03  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui/DefaultWorkbench.cs: Removed some debug code.

2007-09-03  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui/SdiWorkspaceLayout.cs: Added null check. Should fix
	  bug #82553.

2007-08-31  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.CodeTemplates/CodeTemplatePanel.cs,
	  MonoDevelop.Ide.CodeTemplates/CodeTemplateService.cs,
	  MonoDevelop.Ide.CodeTemplates/TemplateCompletionDataProvider.cs,
	  MonoDevelop.Ide.Gui.Content/TextEditorProperties.cs,
	  MonoDevelop.Ide.Gui.OptionPanels/AddInsOptionsPanel.cs,
	  MonoDevelop.Ide.Gui.OptionPanels/LoadSavePanel.cs,
	  MonoDevelop.Ide.Gui.OptionPanels/BuildPanel.cs,
	  MonoDevelop.Ide.Gui.OptionPanels/ExternalToolPanel.cs,
	  MonoDevelop.Ide.Gui.OptionPanels/SelectStylePanel.cs,
	  MonoDevelop.Ide.Gui.OptionPanels/TasksOptionsPanel.cs,
	  MonoDevelop.Ide.Gui.OptionPanels/CodeGenerationPanel.cs,
	  MonoDevelop.Ide.Templates/FileTemplate.cs,
	  MonoDevelop.Ide.Templates/TextTemplate.cs,
	  MonoDevelop.Ide.Templates/ProjectTemplate.cs,