@@ -121,7 +121,6 @@ namespace MonoDevelop.Ide.Gui.Dialogs {
             w7.Fill = false;
             // Container child hbox5.Gtk.Box+BoxChild
             this.hbuttonbox1 = new Gtk.HButtonBox();
-            this.hbuttonbox1.Name = "hbuttonbox1";
             this.hbuttonbox1.Spacing = 10;
             this.hbuttonbox1.LayoutStyle = ((Gtk.ButtonBoxStyle)(4));
             // Container child hbuttonbox1.Gtk.ButtonBox+ButtonBoxChild
